<resources>
    <string name="app_name">FootballLeagueMVP</string>
    <string name="back_button">Back Button</string>
    <string name="search_match">Search Match</string>
    <string name="content_description">Content Description</string>

    <string name="league_list">Daftar Liga</string>
    <string name="versus_icon">:</string>
    <string name="favorite_match_list">Favorite Match List</string>
    <string name="red_cards">Red Cards</string>
    <string name="yellow_cards">Yellow Cards</string>
    <string name="goal_maker">Goal maker</string>
    <string name="format_stadium_team_detail">Stadium : %s</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="favorite_list">Favorite List</string>

    <!-- Classement Header -->
    <string name="classement_name">Name</string>
    <string name="classement_mp">MP</string>
    <string name="classement_w">W</string>
    <string name="classement_d">D</string>
    <string name="classement_l">L</string>
    <string name="classement_gf">GF</string>
    <string name="classement_ga">GA</string>
    <string name="classement_gd">GD</string>
    <string name="classement_pts">Pts</string>
    <string name="radio_btn_match">Match</string>
    <string name="radio_btn_team">Team</string>
</resources>
